feat: 新增 dameng 图标

--- a/src/sass/ztree_icon.scss
+++ b/src/sass/ztree_icon.scss
@@ -100,6 +100,10 @@
     background: url('./icons/db2.png') no-repeat center left transparent;
   }
 
+  &.dameng_ico_docu {
+    background: url('./icons/dameng.png') no-repeat center left transparent;
+  }
+
   &.website_ico_docu {
     background: url('./icons/website.png') no-repeat center left transparent;
   }
